--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@google/generative-ai": "^0.21.0",
 		"@hookform/resolvers": "^3.9.0",
 		"@next/swc-wasm-nodejs": "13.5.1",
+		"@radix-ui/react-dialog": "^1.1.5",
 		"@radix-ui/react-progress": "^1.1.1",
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
@@ -19,6 +20,7 @@
 		"@types/node": "20.6.2",
 		"@types/react": "^18.2.48",
 		"@types/react-dom": "^18.2.18",
+		"@uiw/react-markdown-preview": "^5.1.3",
 		"@ungap/with-resolvers": "^0.1.0",
 		"autoprefixer": "10.4.15",
 		"class-variance-authority": "^0.7.0",
@@ -30,6 +32,7 @@
 		"eslint-config-next": "^14.1.0",
 		"framer-motion": "^12.0.1",
 		"input-otp": "^1.2.4",
+		"jspdf": "^2.5.2",
 		"lucide-react": "^0.446.0",
 		"mammoth": "^1.9.0",
 		"motion": "^12.0.5",
