--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@ai-sdk/google": "^1.1.10",
+		"@ai-sdk/openai": "^1.1.9",
 		"@google/generative-ai": "^0.21.0",
 		"@hookform/resolvers": "^3.9.0",
 		"@next/swc-wasm-nodejs": "13.5.1",
@@ -23,6 +25,7 @@
 		"@types/react-dom": "^18.2.18",
 		"@uiw/react-markdown-preview": "^5.1.3",
 		"@ungap/with-resolvers": "^0.1.0",
+		"ai": "^4.1.26",
 		"autoprefixer": "10.4.15",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
@@ -41,6 +44,7 @@
 		"next-themes": "^0.3.0",
 		"pdf2json": "^3.1.4",
 		"postcss": "8.4.30",
+		"puppeteer": "^24.2.0",
 		"react": "^18.2.0",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.2.0",
@@ -52,11 +56,12 @@
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss": "3.3.3",
 		"tailwindcss-animate": "^1.0.7",
+		"tesseract.js": "^5.1.1",
 		"typescript": "5.2.2",
 		"vaul": "^0.9.9",
 		"xlsx": "^0.18.5",
 		"youtube-transcript": "^1.2.1",
-		"zod": "^3.23.8",
+		"zod": "^3.24.1",
 		"zustand": "^5.0.3"
 	}
 }
