--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@radix-ui/react-toast": "^1.2.5",
+		"@supabase/auth-helpers-nextjs": "^0.10.0",
+		"@supabase/supabase-js": "^2.48.1",
 		"@types/node": "20.6.2",
 		"@types/react": "^18.2.48",
 		"@types/react-dom": "^18.2.18",
@@ -42,6 +44,7 @@
 		"motion": "^12.0.5",
 		"next": "^14.1.0",
 		"next-themes": "^0.3.0",
+		"node-appwrite": "^15.0.0",
 		"pdf2json": "^3.1.4",
 		"postcss": "8.4.30",
 		"puppeteer": "^24.2.0",
