--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
 		"next-themes": "^0.3.0",
 		"node-appwrite": "^15.0.0",
 		"pdf2json": "^3.1.4",
+		"playwright": "^1.50.1",
 		"postcss": "8.4.30",
-		"puppeteer": "^24.2.0",
 		"react": "^18.2.0",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.2.0",
