--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"next-themes": "^0.3.0",
 		"node-appwrite": "^15.0.0",
 		"pdf2json": "^3.1.4",
+		"pdfkit": "^0.16.0",
 		"playwright": "^1.50.1",
 		"postcss": "8.4.30",
 		"react": "^18.2.0",
@@ -66,5 +67,8 @@
 		"youtube-transcript": "^1.2.1",
 		"zod": "^3.24.1",
 		"zustand": "^5.0.3"
+	},
+	"devDependencies": {
+		"@types/pdfkit": "^0.13.9"
 	}
 }
